[project]
name = "infinite-craft-computer-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.16",
    "matplotlib>=3.10.8",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "python-dotenv>=1.2.2",
]
